k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ingress
  namespace: ollama
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
  - host: ollama.169.58.68.183.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orchestrator-svc
            port:
              number: 8080
  - host: connect.169.58.68.183.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-connect-svc
            port:
              number: 3000
  - host: command.169.58.68.183.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-command-svc
            port:
              number: 5000
  - host: worker.169.58.68.183.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-worker-svc
            port:
              number: 6000
